# Halide

./: .dir-locals.el
apps/audio_convnet/: Makefile  convnet_generator.cpp  experiments.py  experiments_arm.py  filter_latency.awk  filter_throughput.awk  filter_time.awk  run.cpp
apps/exposure_fusion/: CMakeLists.txt  Makefile  durst_compute.h  durst_memory.cpp  durst_memory.h  experiments.py  exposure_generator.cpp  filter_times.awk  process.cpp
apps/stencil_chain/: Makefile  process.cpp  stencil_chain_generator.cpp
apps/stencil_chain_gpu_durst/: Makefile  experiments.py  get_per_stage_times.sh  stencil_chain_generator.cpp
apps/stencil_chain_latency_durst/: Makefile  experiments.py  filter_times.awk  process.cpp  stencil_chain_generator.cpp
durst/: .gitignore  AetherlingExporter.cpp  AetherlingExporter.h  AetherlingExporterExamples.cpp  AffineIndexingExtractor.cpp  AffineIndexingExtractor.h  CleanVariableNames.cpp  CleanVariableNames.h  ClockworkExporter.cpp  ClockworkExporter.h  ClockworkExporterExamples.cpp  IndexingExtractor.cpp  IndexingExtractor.h  Makefile  RDomExtractor.h  VariableExtractor.cpp  VariableExtractor.h  aetherling  check_aws_hls.sh  clockwork  compile_aws_hls.sh  down.cpp  gdb_clockwork.sh  helpers.cpp  helpers.h  remote_aws_hls_compile.sh  remote_aws_hls_run.sh  run_aetherling.sh  run_aws_hls.sh  run_clockwork.sh  simple  simple.cpp  tmp.txt  vivado_log.org
